<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".VerticalLinearLayoutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/exercise"
        android:textSize="12sp" />
    <Button
        android:id="@+id/button_start_service"
        android:onClick="onStartServiceClick"
        android:text="@string/start_service"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/button_stop_service"
        android:onClick="onStopServiceClick"
        android:text="@string/stop_service"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/button_start_horizontal_linear_layout_activity"
        android:onClick="onStartHorizontalLnearLayoutActivityClick"
        android:text="@string/horizontal_linear_layout"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/button_start_telative_layout_activity"
        android:onClick="onStartRelativeLayoutActivityClick"
        android:text="@string/relative_layout"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/button_start_constraint_layout_activity"
        android:onClick="onStartConstraintLayoutActivityClick"
        android:text="@string/constraint_layout"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />
</LinearLayout>